Fix info-box title alignment to center

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ body {
 .info-box .title {
     display: flex;
     justify-content: center;
+    text-align: center;
     font-size: 32px;
     font-weight: 800;
     margin: 32px;
